--- a/merge-upstream.yml
+++ b/merge-upstream.yml
@@ -13,7 +13,7 @@ on:
     branches:
       - master
   schedule:
-    - cron: 30 19 * * *
+    - cron: 0 0 * * *
 
 jobs:
 
@@ -38,7 +38,7 @@ jobs:
         git config --global --list
 
     - name: Load upstream commits
-      run: git pull https://github.com/coolsnowwolf/lede.git --log --no-commit
+      run: git pull https://github.com/openwrt/openwrt.git --log --no-commit
 
     - name: Apply commit changes
       run: |
